# toolhub

./: .env  .env.example  .gitignore  AI助手使用说明.md  AI助手悬浮球使用说明.md  CHANGELOG.md  EXCEL_IMPLEMENTATION.md  GENERAL_SETTINGS_GUIDE.md  LICENSE  README.md  REMINDER_DEDUPLICATION.md  REMINDER_FIX.md  REMINDER_GUIDE.md  ai.md  ai图标  gemini.md  generate_icons.py  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js  图标快速配置.md  快速启动指南.md  更换图标指南.md
.claude/: settings.local.json
.codex/environments/: environment.toml
.github/workflows/: release.yml
docs/: CLOSE_BEHAVIOR_UPDATE.md  Maven仓库可视化工具方案.md  Redis客户端工具方案.md  SDK版本管理方案.md  SQLite数据库管理工具方案.md  SYSTEM_TRAY.md  VUE_ARCHITECTURE.md  macos-compatibility.md  release-workflow.md  tauri-window-dialog-改进方案.md  代理工具方案.md  代码格式化工具方案.md  加密解密工具方案.md  图片Base64转换工具方案.md  工具箱开发指南.md  工具箱按钮图标化改造方案.md  工具箱缺陷审计报告.md  截图工具方案.md  接口测试工具方案.md  数据库连接工具方案.md  文件比对工具方案.md  方案  正则测试工具方案.md  电子书阅读器方案.md  端口管理工具方案.md  首页实时新闻方案.md
openspec/: project.md
openspec/changes/add-embedded-spreadsheet-editor/: design.md  proposal.md  tasks.md
openspec/changes/add-productivity-toolbox/: design.md  proposal.md  tasks.md
openspec/changes/add-sticky-notes/: README.md  design.md  proposal.md  tasks.md
openspec/changes/enhance-productivity-modules/: design.md  proposal.md  tasks.md
openspec/changes/optimize-notes-management/: proposal.md  tasks.md
openspec/changes/refactor-dashboard-with-ai-assistant/: IMPLEMENTATION_COMPLETE.md  README.md  design.md  proposal.md  tasks.md  实施完成总结.md  提案完成总结.md
public/: custom-notification-window.html  custom-titlebar-window.html
public/splash/: index.html
scripts/: _check.mjs  auto-dev.cjs  diag-dark.cjs  fetch-ai-icons.mjs  find-blue-rgba.cjs  find-blue.cjs  find-pale-blue.cjs  find-wrapper-blue.cjs  fix-blue.cjs  fix-light-hex.cjs  fix-views-dark.cjs  gen-letter-icons.mjs  patch-icons-v2.mjs  patch-icons.mjs  push-all.cjs  release.cjs  strip-cat-emoji.cjs  theme-audit.cjs  theme-aware-fix.cjs  warm-toolbox.cjs
server/: README.md  pom.xml
src/: App.vue  components.d.ts  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: child-window.json  core.md  custom-notification-window.json  custom-titlebar-window.json  default.json  floating-ball-window.json  screenshot-overlay-window.json  sticky-notes-window.json
src-tauri/icons/: icon.icns
src-tauri/installer/: installer.nsi
src-tauri/installer/images/: README.md  create-placeholder-images.ps1
src-tauri/installer/languages/: English.nsh  SimpChinese.nsh
src-tauri/migrations/: 001_initial_schema.sql  002_enhance_schema.sql  003_add_todos_start_date.sql
src-tauri/splash/: README.md  animations.json  index.html
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  scripts.rs  setup.rs  state.rs
src-tauri/src/commands/: app_log.rs  bookmark.rs  chat.rs  credential.rs  crypto.rs  database.rs  dev_server.rs  downloader.rs  file_ops.rs  file_tree.rs  greet.rs  hardware.rs  image_convert.rs  log_analysis.rs  maven.rs  mock_server.rs  mod.rs  network.rs  port.rs  redis.rs  screenshot.rs  sdk.rs  shell.rs  sqlite.rs  ssh.rs  updater.rs  wallpaper.rs  window.rs
src/api/: index.js  window.js
src/components/: AIAssistant.vue  AIFloatingBall.vue  AdvancedFilter.vue  CloseConfirmDialog.vue  CodeExample.vue  ContextMenu.vue  DocLayout.vue  DocPage.vue  EmptyState.vue  FeatureGrid.vue  FilePreview.vue  FolderTreeItem.vue  HeaderBar.vue  ProductivitySidebar.vue  Sidebar.vue  SkeletonLoader.vue  SplashPreview.vue  ThemeSettingCard.vue  TitleBar.vue  TodoDependencyGraph.vue  ToolIcon.vue  TraySettingCard.vue  UpdateDialog.vue  WindowManagementCard.vue
src/components/sdk/: SdkEnvCard.vue  SdkVersionCard.vue
src/components/sticky-notes/: BookmarkGrid.vue  DocumentPreview.vue  ScheduleView.vue  TaskList.vue
src/composables/: index.js  useAgentTeam.js  useFavoriteTools.js  useHeaderStyle.js  useKeyboardShortcuts.js  useLazyLoad.js  useSettings.js  useWindow.js  useWindowState.js
src/composables/settings/: _db.js  useAiAssistant.js  useAiConfig.js  useFeedbackAndUpdate.js  (+6 more)
src/constants/: index.js
src/data/: ai-sites.js
src/demo/: notes.html
src/examples/: fileTreeExamples.js
src/i18n/: index.js
src/plugins/: examplePlugin.js  pluginManager.js
src/router/: index.js
src/services/: aiService.js  notificationService.js
src/store/: app.js  index.js  productivity.js  user.js
src/styles/: common.css  design-refresh.css  editorial-flat.css  theme-refresh.css  toolbox-unified.css
src/utils/: aiProviders.js  appLog.js  appearance.js  bookmarkImport.js  bookmarkSnapshot.js  calendarImportExport.js  codeFormatter.js  database.js  databaseOptimization.js  diffEngine.js  downloadManager.js  ebookManager.js  encryption.js  errorHandler.js  gitManager.js  gitReportManager.js  holidays.js  logAnalysis.js  lunarCalendar.js  markdown.js  masterPassword.js  networkTools.js  noteExport.js  noteMetadata.js  noteTemplate.js  noteVersion.js  notes.js  passwordAudit.js  passwordImport.js  passwordStrength.js  performance.js  portManager.js  recurrence.js  redisManager.js  reminderService.js  screenshotManager.js  sdkManager.js  search.js  searchableTools.js  sourceContextAnalysis.js  (+8 more)
src/views/: AIAssistantWindow.vue  AIChat.vue  AIConversation.vue  About.vue  AgentTeam.vue  ApiDebug.vue  ApiDocs.vue  AutoTest.vue  Bookmarks.vue  Calendar.vue  Chat.vue  CliDemo.vue  ClipboardDemo.vue  CodeFormatter.vue  CredentialManager.vue  CryptoTool.vue  CustomTitleBarWindow.html  Dashboard.vue  DesktopFloatingBall.vue  DialogDemo.vue  DnsLookup.vue  DownloadManager.vue  EbookReader.vue  EbookShelf.vue  FileDiff.vue  FileManager.vue  FileTreeDemo.vue  GitDailyReport.vue  GitManager.vue  GlobalShortcutDemo.vue  HardwareInfo.vue  HexConverter.vue  Home.vue  HttpDemo.vue  ImageFormatConverter.vue  ImageToBase64.vue  IpLookup.vue  LogAnalyzer.vue  LogDemo.vue  MavenRepo.vue  (+40 more)
tus-desktop/: package-lock.json  package.json
tus-desktop/src/: App.vue
tus-desktop/src-tauri/: Cargo.toml  tauri.conf.json
website/: index.html
(+119 files in other folders)
