[package]
name = "vue3-vite-tauri-template"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vue3_vite_tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# 仅用于多实例开发测试，禁用 single-instance 限制
dev2 = []

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-websocket = "2"
tauri-plugin-upload = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-cli = "2"
tauri-plugin-positioner = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
encoding_rs = "0.8"
urlencoding = "2.1"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["stream"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "ico"] }
kamadak-exif = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
sha1 = "0.10"
md-5 = "0.10"
quick-xml = { version = "0.31", features = ["serialize"] }
walkdir = "2"
dirs = "5"
regex = "1"
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"
async-trait = "0.1"
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Security_Credentials",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Environment",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

